--- a/ChoreBuddies.Frontend/UI/Components/DateTimePickerPopUp.razor
+++ b/ChoreBuddies.Frontend/UI/Components/DateTimePickerPopUp.razor
@@ -2,7 +2,7 @@
 
 @inject ISnackbar Snackbar
 
-<MudDialog>
+<MudDialog ContentClass="overflow-hidden">
     <TitleContent>
         <MudText Typo="Typo.h6">
             <MudIcon Icon="@Icons.Material.Filled.Timer" Class="mr-3 mb-n1"/>
