--- a/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdDetails.razor
@@ -91,7 +91,7 @@
 
     private string GetPageTitle() => CurrentMode switch
     {
-        PageMode.Create => "Add New Household",
+        PageMode.Create => "Create New Household",
         PageMode.Edit => "Edit Household",
         _ => "Household Details"
     };
