--- a/ChoreBuddies.Frontend/Features/Household/HouseholdSetupPage.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdSetupPage.razor
@@ -37,7 +37,7 @@
 @code {
     private void CreateHousehold()
     {
-        _navigationManager.NavigateTo("/household/create");
+        _navigationManager.NavigateTo("/household/new");
     }
 
     private void JoinHousehold()
