--- a/ChoreBuddies.Frontend/UI/App.razor
+++ b/ChoreBuddies.Frontend/UI/App.razor
@@ -40,7 +40,7 @@
             path == "login" ||
             path == "signup" ||
             path == "household/join" ||
-            path == "household/create")
+            path == "household/new")
             return;
 
         var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
