--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -26,7 +26,7 @@
         <HouseholdInvitationCodeDisplay Household="household" />
         <MudPaper Elevation="0" Class="pa-6 mb-8" Style="background:#f5f6f8; border-radius:16px;">
             <div>
-                <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Start" Class="mb-4">
+                <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Start" Class="mb-3">
                     <MudText Typo="Typo.h5" Style="font-weight:700;">
                         Household Details
                     </MudText>
@@ -35,6 +35,7 @@
                                StartIcon="@Icons.Material.Filled.Edit"
                                OnClick="@EditHousehold"
                                Color="Color.Primary"
+                               Size="Size.Large"
                                Style="text-transform:none; border-radius:20px;">
                         Edit
                     </MudButton>
