--- a/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
@@ -59,18 +59,28 @@
                         @reward.Description
                     </MudText>
 
-                    <MudStack Direction="Row" AlignItems=AlignItems.Center Justify=Justify.SpaceBetween>
+                    <MudStack Direction="Row" AlignItems="AlignItems.Start" Justify=Justify.SpaceBetween>
                         <MudText Typo="Typo.subtitle2" Style="font-weight:600;">
                             @reward.Cost points
                         </MudText>
 
-                        <MudButton Variant="Variant.Filled"
-                                   Color="Color.Primary"
-                                   Size="Size.Small"
-                                   Disabled="@(!CanRedeem(reward))"
-                                   Style="text-transform:none;">
-                            Redeem
-                        </MudButton>
+                        <MudStack Row="true" Spacing="2" AlignItems="AlignItems.Center">
+                            <MudButton Variant="Variant.Outlined"
+                                       Color="Color.Primary"
+                                       Size="Size.Small"
+                                       OnClick="@(() => GoToRewardDetails(reward.Id))"
+                                       Style="text-transform:none;">
+                                View Reward
+                            </MudButton>
+
+                            <MudButton Variant="Variant.Filled"
+                                       Color="Color.Primary"
+                                       Size="Size.Small"
+                                       Disabled="@(!CanRedeem(reward))"
+                                       Style="text-transform:none;">
+                                Redeem
+                            </MudButton>
+                        </MudStack>
                     </MudStack>
                 </MudPaper>
             </MudItem>
@@ -126,8 +136,9 @@
     }
 
     private bool CanRedeem(RewardDto reward) => TotalPoints >= reward.Cost && reward.QuantityAvailable > 0;
-    
+
     private void AddReward() => navigationManager.NavigateTo("rewards/new");
+    private void GoToRewardDetails(int id) => navigationManager.NavigateTo($"reward-details/{id}");
 
     // ===== DTOs =====
 
