--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -3,6 +3,7 @@
 @using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
 @using Shared.Households
+@using Shared.Rewards
 @using Shared.ScheduledChores
 @using Shared.Users
 
@@ -32,11 +33,11 @@
                     </MudText>
 
                     <MudButton Variant="Variant.Outlined"
-                               StartIcon="@Icons.Material.Filled.Edit"
-                               OnClick="@EditHousehold"
-                               Color="Color.Primary"
-                               Size="Size.Large"
-                               Style="text-transform:none; border-radius:20px;">
+                    StartIcon="@Icons.Material.Filled.Edit"
+                    OnClick="@EditHousehold"
+                    Color="Color.Primary"
+                    Size="Size.Large"
+                    Style="text-transform:none; border-radius:20px;">
                         Edit
                     </MudButton>
                 </MudStack>
@@ -92,8 +93,8 @@
                                 Edit
                             </MudButton>
                             <MudButton Variant="Variant.Text"
-                                       Color="Color.Error"
-                                       Size="Size.Small">
+                            Color="Color.Error"
+                            Size="Size.Small">
                                 Delete
                             </MudButton>
                         </MudStack>
@@ -104,8 +105,8 @@
 
         <MudItem xs="12">
             <MudButton Variant="Variant.Filled"
-                       Color="Color.Primary"
-                       Style="text-transform:none;">
+            Color="Color.Primary"
+            Style="text-transform:none;">
                 Add recurring chore
             </MudButton>
         </MudItem>
@@ -125,21 +126,21 @@
         </HeaderContent>
 
         <RowTemplate>
-            <MudTd>@context.UserName</MudTd>
-            <MudTd>@context.RewardName</MudTd>
-            <MudTd>@context.Points</MudTd>
+            <MudTd>@context.</MudTd>
+            <MudTd>@context.Name</MudTd>
+            <MudTd>@context.PointsSpent</MudTd>
             <MudTd Align="Align.Right">
                 <MudStack Direction="Row" Spacing="1">
                     <MudButton Variant="Variant.Filled"
-                               Color="Color.Primary"
-                               Size="Size.Small"
-                               Style="text-transform:none;">
+                    Color="Color.Primary"
+                    Size="Size.Small"
+                    Style="text-transform:none;">
                         Approve
                     </MudButton>
                     <MudButton Variant="Variant.Outlined"
-                               Color="Color.Error"
-                               Size="Size.Small"
-                               Style="text-transform:none;">
+                    Color="Color.Error"
+                    Size="Size.Small"
+                    Style="text-transform:none;">
                         Reject
                     </MudButton>
                 </MudStack>
@@ -157,12 +158,7 @@
 
     private List<ScheduledChoreTileViewDto> RecurringChores = [];
 
-    // ==== MODELS ====
-    private List<PendingReward> PendingRewards = new()
-    {
-        new PendingReward("Tom", "Movie Night", 500),
-        new PendingReward("Tom", "Ice Cream Sundae Bar", 250)
-    };
+    private List<RedeemedRewardDto> PendingRewards = [];
 
     protected override async Task OnInitializedAsync()
     {
@@ -172,7 +168,7 @@
 
     public void EditHousehold() => navigationManager.NavigateTo($"/household-details/{household!.Id}");
 
-    public class PendingReward
+    public class RewardWithUser
     {
         public string UserName { get; set; } = "";
         public string RewardName { get; set; } = "";
