--- a/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
@@ -1,6 +1,7 @@
 ﻿@page "/rewards"
 @using ChoreBuddies.Frontend.Features.RedeemedRewards
 @using MudBlazor
+@using Shared.RedeemedRewards
 @using Shared.Rewards
 
 @inject IRedeemedRewardsService redeemedRewardsService
