scheduled chores management

--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -65,7 +65,9 @@
 
 
     <!-- ===== Recurring chores ===== -->
-    <MudText Typo="Typo.h6" Class="mb-4" Style="font-weight:700;">
+    <ScheduledChoresManagement />
+
+    @* <MudText Typo="Typo.h6" Class="mb-4" Style="font-weight:700;">
         Recurring Chores
     </MudText>
 
@@ -109,7 +111,7 @@
                 Add recurring chore
             </MudButton>
         </MudItem>
-    </MudGrid>
+    </MudGrid> *@
 
     <!-- ===== Reward approvals ===== -->
     <MudText Typo="Typo.h6" Class="mb-4" Style="font-weight:700;">
