--- a/ChoreBuddies.Frontend/UI/Components/Chores/Activity.razor
+++ b/ChoreBuddies.Frontend/UI/Components/Chores/Activity.razor
@@ -4,7 +4,7 @@
     <MudGrid>
         <MudItem xs="1">
             <MudPaper Elevation="0" Class="icon-box">
-                <MudIcon Icon="@GetIcon()" Size = "Size.Medium"/>
+                <MudIcon Icon="@GetIcon()" Size="Size.Medium" />
             </MudPaper>
         </MudItem>
         <MudItem xs="7" Class="align-center">
@@ -21,12 +21,13 @@
 
 @code {
     [Parameter] public ChoreDto? _choreDto { get; set; }
+    [Parameter] public string? _userName { get; set; }
     public string? GetTitle() => _choreDto?.Name;
-    public string? GetStatus()
+    public async Task<string?> GetStatus()
     {
-        if(_choreDto?.Status == Status.Assigned)
+        if (_choreDto?.Status == Status.Assigned)
         {
-            return $"Assigned to {_choreDto.Name}"; //TODO: change to get user by Id when available
+            return $"Assigned to {_userName}";
         }
         return _choreDto?.Status.ToString();
     }
