--- a/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdManagement.razor
@@ -1,4 +1,5 @@
 ﻿@page "/household/manage"
+@using ChoreBuddies.Frontend.Features.Chores.ScheduledChores
 @using ChoreBuddies.Frontend.Features.ScheduledChores
 @using ChoreBuddies.Frontend.Features.User
 @using MudBlazor
