--- a/ChoreBuddies.Frontend/Features/Notifications/NotificationsSettings.razor
+++ b/ChoreBuddies.Frontend/Features/Notifications/NotificationsSettings.razor
@@ -113,6 +113,8 @@ else
         NotificationEvent.NewChore => "New Chore Assigned", 
         NotificationEvent.RewardRequest => "Reward Request Submitted",
         NotificationEvent.ChoreCompleted => "Chore Completed",
+        NotificationEvent.NewMessage => "New Message",
+        NotificationEvent.Reminder => "Reminder",
         _ => eventType.ToString()
     };
 }
